--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,24 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+    <div id="controlAddIn"></div>
+
+    <!-- <button onclick="window.fireAngularEvent('sendCustomer2Angular',null)">Click</button> -->
+    <p id="msgFromAngular">Old Value</p>
 </body>
+
+<script>
+    fireAngularEvent('sendCustomer2Angular',[`[{ "FieldName": "MockFeild1", "FieldValue": "Value1" },
+                                            { "FieldName": "MockFeild2", "FieldValue": "Value2" },
+                                            { "FieldName": "MockFeild3", "FieldValue": "Value3" },
+                                            { "FieldName": "MockFeild4", "FieldValue": "Value4" },
+                                            { "FieldName": "MockFeild5", "FieldValue": "Value5" }]`]);
+
+    window.subscribeToAngularEvent('showMessageInBC', fn);
+
+    function fn ()
+    {
+        document.getElementById("msgFromAngular").innerHTML = arguments[0];
+    }
+</script>
 </html>
